added a comment to practice using git

--- a/spider-man.html
+++ b/spider-man.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="assets/stylesheet/spider-stylesheet.css">
 </head>
 <body>
-
+<!---streamlines the website by creating a column down the center-->
   <section class="wrap">
 
   <header>
