--- a/spider-man.html
+++ b/spider-man.html
@@ -26,28 +26,28 @@
       Volume 1
 
     --><section class="one-quarter">
-        <img class="thumbnail" src="assets/images/vol1-001.jpg">
-        <p>The Amazing Spider-Man Vol.1 (1963)</p>
+      <a href="vol2.html"><img class="volume-cover" src="vol1/1/images/vol1-001.jpg">
+      <p>The Amazing Spider-Man Vol.1 (1963)</p></a>
       </section><!--
 
         Volume 2
 
       --><section class="one-quarter">
-      <a href="vol2.html"><img class="thumbnail" src="vol2/images/vol2-001.jpg">
+      <a href="vol2.html"><img class="volume-cover" src="vol2/images/vol2-001.jpg">
       <p>The Amazing Spider-Man Vol.2 (1999)</p></a>
       </section><!--
 
         Volume 3
 
       --><section class="one-quarter">
-      <a href="vol3.html"><img class="thumbnail" src="vol3/images/vol3-001.jpg">
+      <a href="vol3.html"><img class="volume-cover" src="vol3/images/vol3-001.jpg">
       <p>The Amazing Spider-Man Vol.3 (2014)</p></a>
       </section><!--
 
         Volume 4
 
       --><section class="one-quarter">
-        <a href="vol4.html"><img class="thumbnail" src="vol4/images/vol4-001.jpg">
+        <a href="vol4.html"><img class="volume-cover" src="vol4/images/vol4-001.jpg">
         <p>The Amazing Spider-Man Vol.4 (2015)</p></a>
       </section>
 
